...
	private let emailLabel: UILabel = {
		let label = CustomUIElements().makeLabel(font: UIFont.customFont(.manropeRegular, size: 12),
												 textColor: .dark, text: "Email")
		return label
	}()
	
	private lazy var emailTextField: UITextField = {
		let textField = UITextField()
		textField.autocapitalizationType = .none
		textField.font = UIFont.customFont(.manropeRegular, size: 14)
		textField.placeholder = "Input email"
		textField.accessibilityIdentifier = "emailTextField"
		return textField
...
	private let passwordLabel: UILabel = {
		let label = CustomUIElements().makeLabel(font: UIFont.customFont(.manropeRegular, size: 12),
												 textColor: .dark, text: "Password")
		return label
	}()
	
	private lazy var passwordTextField: UITextField = {
		let textField = UITextField()
		textField.font = UIFont.customFont(.manropeRegular, size: 14)
		textField.autocapitalizationType = .none
		textField.placeholder = "Input password"
		textField.isSecureTextEntry = true
		textField.accessibilityIdentifier = "passwordTextField"
...
	private let passwordDividerView: UIView = {
		let view = UIView()
		view.backgroundColor = .dark30
		return view
	}()

	private lazy var loginButton: UIButton = {
		let button = CustomUIElements().makeLargeButton(buttonColor: .orange, buttonTextColor: .light60,
														borderColor: .clear, buttonText: "Log In")
		button.addTarget(self, action: #selector(handleLogin), for: .touchUpInside)
		button.accessibilityIdentifier = "loginButton"
		return button
	}()
...
