...
	case electrical_bolt
	case electrical_plug
	case electrical_power
	case email
	case emoticon
	case favorite
	case filter
	case folder_shared
	case folder
	case font
	case fullscreen
	case golf_course
	case headset
...
