...
		let buttonHStack = UIStackView(arrangedSubviews: [languageButton, techButton, sportButton, artButton, musicButton])
		buttonHStack.spacing = 8
		alerView.addSubview(buttonHStack)
		buttonHStack.center(inView: alerView)
		
		let button = UIButton(frame: CGRect(x: 0, y: alerView.frame.size.height - 50, width: alerView.frame.size.width, height: 50))
		button.setTitle("Done", for: .normal)
		button.setTitleColor(.red, for: .normal)
		button.addTarget(self, action: #selector(finishBecomeTutor), for: .touchUpInside)
		alerView.addSubview(button)
		
		UIView.animate(withDuration: 0.2) {
			self.backgroundView.alpha = Constants.backgroundAplphaTo
...
